--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title>Автошкола в Києві | Taurus-School</title>
+	<title>Автошкола в Києві GIT | Taurus-School</title>
 	<meta property="og:site_name" content="Автошкола в Києві | Taurus-School" />
 	<meta property="description" content="➤ Актуальна інформація ✓ Поради спеціалістів ✓ Консультація ✓ Вигідна Ціна ✓ Читати на сайті ➥ Заходьте!">
 	<meta property="og:title" content="Автошкола в Києві | Taurus-School">
